made some changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="right text-big bold">
-            Hi! I am your webapp.
+         ok so this is my web page
+	    </br> Hi! I am your webapp. yolo
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
