[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="right text-big bold">
          ok so this is my web page
-	    </br> Hi! I am your webapp. yolo
+	     Hi! I am your webapp. yolo
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
