--- a/article-one.html
+++ b/article-one.html
@@ -9,10 +9,10 @@ article 1 url
 </h2>
 <p> I am basically a new in the field of web developing  but i found that this is the field in which i am interested and want to be successful. 
 </p>
-</hr width="50%" align="center">
+<hr width="50%" align="center">
 <h2> COMPUTER SKILLS
 </h2>
-<p>
+
 <ul> 
 <li>HTML
 </li>
@@ -24,6 +24,6 @@ JavaScript
 <li>Python
 </li>
 </ul>
-</p>
+
 </body>
 </html>
