--- a/article-one.html
+++ b/article-one.html
@@ -1,15 +1,16 @@
 <html>
 <head>
-<title>
-article 1 url
-</title>
+
 </head>
 <body>
 <h2> PERSONAL
 </h2>
+<p>
+    <a href="/"> HOME </a>
+</p>
 <p> I am basically a new in the field of web developing  but i found that this is the field in which i am interested and want to be successful. 
 </p>
-<hr width="50%" align="center">
+<hr width="50%" align="center"/>
 <h2> COMPUTER SKILLS
 </h2>
 
