--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,10 @@
 <p>
     <a href="/"> HOME </a>
 </p>
-<p> I am basically a new in the field of web developing  but i found that this is the field in which i am interested and want to be successful. 
+<p> I am basically a new in the field of <br/> 
+web developing  but i found that this is <br/>
+the field in which i am interested and 
+<br/>want to be successful. 
 </p>
 <hr width="50%" align="center"/>
 <h2> COMPUTER SKILLS
