[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-
+    <title> dine new article
+    </title>
+<meta name="viewport" content="width=device-width, initial-scale=1"  />
 </head>
 <body>
 <h2> PERSONAL
@@ -8,10 +10,10 @@
 <p>
     <a href="/"> HOME </a>
 </p>
-<p> I am basically a new in the field of <br/> 
-web developing  but i found that this is <br/>
+<p> I am basically a new in the field of 
+web developing  but i found that this is 
 the field in which i am interested and 
-<br/>want to be successful. 
+want to be successful. 
 </p>
 <hr width="50%" align="center"/>
 <h2> COMPUTER SKILLS
