--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,19 +4,20 @@
     </title>
 <meta name="viewport" content="width=device-width, initial-scale=1"  />
 </head>
-<body>
-<h2> PERSONAL
+<body class="body" >
+<h2 class="h2" > PERSONAL
 </h2>
 <p>
     <a href="/"> HOME </a>
-</p>
-<p> I am basically a new in the field of 
+</p >
+<p class="p1" > I am basically a new in the field of 
 web developing  but i found that this is 
 the field in which i am interested and 
-want to be successful. 
+want to be successful.
+Evolved in developing a web site for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing the simplest static single page of plain text to the most complex web-based internet applications, electronic businesses, and social network services. A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development. Among web professionals, "web development" usually refers to the main non-design aspects of building web sites: writing markup and coding. Most recently Web development has come to mean the creation of content management systems or CMS. These CMS can be made from scratch, proprietary or open source. In broad terms the CMS acts as middleware between the database and the user through the browser. A principle benefit of a CMS is that it allows non-technical people to make changes to their web site without html
 </p>
 <hr width="50%" align="center"/>
-<h2> COMPUTER SKILLS
+<h2 class="h2" > COMPUTER 
 </h2>
 
 <ul> 
