[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,20 @@
     <title> dine new article
     </title>
 <meta name="viewport" content="width=device-width, initial-scale=1"  />
+<style>
+.p1
+{
+    color:blue;
+    font:30px;
+    background-color:lightblue;
+border:10px solid red ;
+}
+.h2{
+    color:red;
+    font-variant:small-caps;
+    font-weight:bold;
+}
+</style>
 </head>
 <body class="body" >
 <h2 class="h2" > PERSONAL
