--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,10 @@
     </title>
 <meta name="viewport" content="width=device-width, initial-scale=1"  />
 <style>
+.body
+{
+    background-color:lightgrey;
+}
 .p1
 {
     color:blue;
